--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap");
 @import "tailwindcss";
 
 html {
-  font-size: size 62.5%;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Instrument Sans", sans-serif;
 }
